@@ -10,7 +10,7 @@
 name=Red Layer
 qgisMinimumVersion=2.0
 description=quick georeferenced sketches and annotations
-version=1.1
+version=1.2
 author=Enrico Ferreguti
 email=enricofer@gmail.com
 
@@ -19,7 +19,7 @@ email=enricofer@gmail.com
 # Recommended items:
 
 # Uncomment the following line and add your changelog:
-# changelog= R1.1 toolbar disabled when project is not saved issue fixed
+# changelog= R1.2 throws error opening new project issue fixed
 
 # Tags are comma separated with spaces allowed
 tags=annotations, sketch, draw, pen, 
