@@ -3,3 +3,6 @@ First release
 
 R1.1 
 Toolbar disabled when project is not saved. issue fixed
+
+R1.2 
+throws error opening new project issue fixed
